# ccan-rs

./: .gitignore  Cargo.toml
.github/workflows/: build.yml
ccan/: Cargo.toml
ccan-cli/: Cargo.toml
ccan-cli/src/: args.rs  main.rs  output.rs
ccan/src/: bayes.rs  bettergit.rs  cc.rs  ccan.rs  changes.rs  cochanges.rs  freqs.rs  lib.rs  matrix.rs  model.rs  naive.rs  nop.rs  predict.rs  probs.rs
cli/: Cargo.toml
cli/src/: main.rs  output.rs
src/: bettergit.rs  cc.rs  ccan.rs  cochanges.rs  git.rs  main.rs  matrix.rs  output.rs
test-data/: changes.csv  expected_coeff.csv  expected_dates_distance.csv  sampled_dates.csv
