[workspace]
members = ["ccan", "ccan-cli"]

[workspace.package]
version = "1.7.1"
edition = "2021"
description = "Git co-change analysis"
authors = ["Darius Sas <darius.sas@outlook.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# https://stackoverflow.com/questions/36604010/how-can-i-build-multiple-binaries-with-cargo
[workspace.dependencies]
anyhow = "1.0.75"
chrono = "0.4.31"
log = "0.4.20"
serde = { version = "1.0.188", features = ["rc"] }
itertools = "0.11.0"
regex = "1.9.6"
