[package]
name = "ccan"
version.workspace = true
authors.workspace = true
description.workspace = true

[lib]
name = "ccan"
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
regex = { workspace = true }
log = { workspace = true }
itertools = { workspace = true }
git2 = "0.18.1"
ndarray = "0.15.6"

[dev-dependencies]
csv = "1.3.0"
ndarray-csv = "0.5.2"